# macro_static_str_to_char

./: Cargo.toml  README.md
src/: lib.rs
test_crate/: Cargo.toml
test_crate/src/: main.rs
